# statistic-data-generator

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
app/: main.py
app/src/: schemas.py  utils.py  views.py
